# AirFerry

./: .gitignore  AGENTS.md  BUG_FIXES_SUMMARY.md  BUG_FIX_VERIFICATION.md  CHANGELOG_BUGFIXES.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  OVERALL_SUMMARY.md  PHASE2_OPTIMIZATION_SUMMARY.md  README.md  XZ_COMPRESSION_PLAN.md  tsconfig.json
.github/workflows/: afgrid-v3.yml  windows.yml
.workbuddy/memory/: 2026-06-21.md
apps/android/: build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/cpp/: CMakeLists.txt  scan_jni.cpp
apps/android/app/src/main/java/com/easytransfer/app/nativelib/: NativeBridge.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/app/src/main/res/layout/: activity_file_list.xml  activity_scan.xml  activity_settings.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
apps/browser-extension/: package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/browser-extension/scripts/: build-all.cjs  extract-lzma-wasm.cjs  fix-manifest.cjs
apps/browser-extension/src/: options.tsx  popup.tsx  types.ts
apps/browser-extension/src/assets/: app.css
apps/browser-extension/src/components/: CompressProgress.tsx  QrStream.tsx
apps/browser-extension/src/pages/: FileSelectPage.tsx  ParamsPage.tsx  PlayPage.tsx  StatsPage.tsx
apps/browser-extension/src/wasm/: bundle.ts  compress.ts  crc32.ts  loader.ts
apps/browser-extension/src/workers/: compress.worker.ts
apps/scanner/: build.gradle.kts  settings.gradle.kts
apps/scanner/app/: build.gradle.kts  proguard-rules.pro
apps/scanner/app/src/main/: AndroidManifest.xml
apps/scanner/app/src/main/cpp/: CMakeLists.txt  scan_jni.cpp
apps/scanner/app/src/main/java/com/airferry/app/: AirFerryApp.kt
apps/scanner/app/src/main/res/layout/: activity_receive_detail.xml
apps/scanner/app/src/main/res/values/: strings.xml  themes.xml
apps/scanner/app/src/main/res/xml/: backup_rules.xml  file_paths.xml
apps/sender/: package.json  pnpm-workspace.yaml
apps/sender/scripts/: build-all.cjs  build-wasm.cjs  fix-manifest.cjs  prepare-plasmo-icon.cjs
apps/sender/src/: options.tsx  popup.tsx  types.ts
apps/sender/src/assets/: app.css
apps/sender/src/background/: index.ts
apps/sender/src/components/: CompressProgress.tsx  QrStream.tsx
apps/sender/src/pages/: FileSelectPage.tsx  ParamsPage.tsx
apps/sender/src/storage/: textDrafts.ts
apps/sender/src/wasm/: afgrid.ts  base64.ts  bundle.ts  compress.ts  loader.ts  session.ts  text.ts
apps/sender/src/workers/: compress.worker.ts
apps/web/: index.html  package-lock.json  package.json  standalone.html  tsconfig.json  vite.config.ts  vite.standalone.config.ts
apps/web/scripts/: build-standalone.cjs  extract-lzma-wasm.cjs  prepare-wasm.cjs
apps/web/src/: main.tsx  standalone.tsx
apps/windows/: AirFerry.sln
apps/windows/AirFerry.Windows/: AirFerry.Windows.csproj  App.xaml  App.xaml.cs  app.manifest
apps/windows/AirFerry.Windows.Tests/: AirFerry.Windows.Tests.csproj  BundleParserTests.cs  FileNameUtilTests.cs  FrameHeaderTests.cs  IngestStatusTests.cs  ProgressSnapshotTests.cs  TextParserTests.cs
apps/windows/AirFerry.Windows/Bundle/: BundleParser.cs  ContentStore.cs  FileNameUtil.cs  TextParser.cs
apps/windows/AirFerry.Windows/Models/: DeviceInfo.cs  RecoveryResult.cs
apps/windows/AirFerry.Windows/Native/: NativeBridge.cs
apps/windows/AirFerry.Windows/Scan/: AfgridSettings.cs  Crc32.cs  DeviceEnumerator.cs  FrameHeader.cs  IngestStatus.cs  MatLuminanceSource.cs  ProgressSnapshot.cs  QrDecodePool.cs  ReceiverSession.cs  VideoCapture.cs  ZxingDecoder.cs
apps/windows/AirFerry.Windows/ViewModels/: ScanViewModel.cs
apps/windows/AirFerry.Windows/Views/: DeviceSelectView.xaml  DeviceSelectView.xaml.cs  FileListView.xaml  FileListView.xaml.cs  ReceiveBundleView.xaml  ReceiveBundleView.xaml.cs  ReceiveDetailView.xaml  ReceiveDetailView.xaml.cs  ReceiveTextView.xaml  ReceiveTextView.xaml.cs  ScanView.xaml  ScanView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
core/qr-protocol/: Cargo.toml
core/qr-protocol/examples/: diag_afgrid.rs  diag_real.rs
core/qr-protocol/src/: compress.rs  frame.rs  lib.rs  qr_render.rs
core/qr-protocol/src/afgrid/: decode.rs  ecc.rs  encode.rs  l1_gray.rs  layout.rs  matrix.rs  mod.rs  mode_word.rs
core/raptorq-core/: Cargo.toml
core/raptorq-core/src/: encoder.rs  lib.rs
core/transfer-engine/: Cargo.toml
core/transfer-engine/scripts/: wasm_dump_frames.mjs
core/transfer-engine/src/: cffi.rs  descriptor.rs  jni.rs  lib.rs  matrix_encode.rs  progress.rs  receiver.rs  resume.rs  wasm.rs
core/transfer-engine/tests/: afgrid_e2e.rs  cffi_e2e.rs  compress_pipeline.rs  diag_afgrid.rs  diag_blockcount.rs  diag_decode_speed.rs  diag_large.rs  diag_perf.rs  diag_repro_stuck.rs  e2e.rs  filemeta_check.rs
crates/qr-protocol/: Cargo.toml
crates/qr-protocol/src/: chunker.rs  compress.rs  frame.rs  lib.rs  qr_render.rs  session.rs
crates/raptorq-core/: Cargo.toml
crates/raptorq-core/src/: config.rs  decoder.rs  encoder.rs  lib.rs  meta.rs  symbol.rs
crates/transfer-engine/: Cargo.toml
crates/transfer-engine/scripts/: wasm_e2e.mjs
crates/transfer-engine/src/: descriptor.rs  jni.rs  lib.rs  progress.rs  receiver.rs  sender.rs  time.rs  wasm.rs
crates/transfer-engine/tests/: compress_pipeline.rs  diag_decode_speed.rs  diag_large.rs  diag_perf.rs  diag_repro_stuck.rs  e2e.rs  filemeta_check.rs  wasm_interop.rs
docs/: SPEC.md  afgrid-format.md  afgrid-merge-checklist.md  api.md  architecture.md  build-android.md  build-browser.md  build-web.md  build-windows.md  data-flow.md  dev-setup.md  protocol.md  qr-frame-format.md  raptorq-params.md
docs/releases/: v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md
scripts/: build-all.sh  build-windows.ps1  env-android-ndk.sh  verify-afgrid-v3.sh
(+30 files in other folders)
