[workspace]
resolver = "2"
members = [
    "crates/raptorq-core",
    "crates/qr-protocol",
    "crates/transfer-engine",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/b1456089826/EasyTransfer"
description = "Fully offline optical file transfer: browser-extension sender <-> Android receiver via QR video stream."

[workspace.dependencies]
# Internal crates
raptorq-core = { path = "crates/raptorq-core" }
qr-protocol = { path = "crates/qr-protocol" }
transfer-engine = { path = "crates/transfer-engine" }

# Common shared deps (pinned for reproducible builds)
crc32fast = "1.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.transfer-engine]
opt-level = 3
