[package]
name = "qr-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QR frame format, chunking, compression and session logic for AirFerry."

[dependencies]
raptorq-core.workspace = true
crc32fast.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
# Optimized QR generator (~7-9× faster than the `qrcode` crate on the
# per-frame Reed-Solomon path); compiles to wasm32 for the browser sender.
fast_qr = { version = "0.12", default-features = false }
# zstd is only available on native/android targets; on wasm32 the C library
# does not compile, so compression is performed on the JS side instead.

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"
# XZ/LZMA2 — extreme compression (native/Android only). The C library does not
# compile on wasm32, and the browser compresses in JS anyway, so it stays gated.
xz2 = "0.1"

[features]
default = []
serde = ["dep:serde", "raptorq-core/serde"]
