[package]
name = "transfer-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transfer orchestration, progress, resume, and WASM/JNI bindings for AirFerry."

# Emit both a rlib (for in-tree dependents / integration tests) and a cdylib
# (for wasm-bindgen on the browser side and for cargo-ndk →
# libtransfer_engine.so on Android). Kotlin loads "transfer_engine".
[lib]
name = "transfer_engine"
crate-type = ["rlib", "cdylib"]

[dependencies]
raptorq-core.workspace = true
qr-protocol.workspace = true
raptorq = "2.0"
crc32fast.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "raptorq-core/serde", "qr-protocol/serde"]
wasm = ["dep:wasm-bindgen"]
jni = []
