[package]
name = "transfer-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transfer orchestration, progress, resume, and WASM/JNI bindings for AirFerry."

# Emit both a rlib (for in-tree dependents / integration tests) and a cdylib
# (for wasm-bindgen on the browser side and for cargo-ndk →
# libtransfer_engine.so on Android). Kotlin loads "transfer_engine".
[lib]
name = "transfer_engine"
crate-type = ["rlib", "cdylib"]

[dependencies]
raptorq-core.workspace = true
qr-protocol.workspace = true
raptorq = "2.0"
crc32fast.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Pin the wasm-bindgen family to versions BEFORE 0.2.93 / js-sys & web-sys 0.3.70.
# wasm-bindgen 0.2.93 enabled the reference-types proposal (`externref` value
# type) by default in its generated `.wasm`; that type only ships in Chrome 96+,
# so the previous loose `"0.2"` / `"0.3"` requirements (resolving to 0.2.125 /
# 0.3.102) emitted a module that Chrome 87/88 rejects at
# `WebAssembly.instantiateStreaming()` with
#   CompileError: invalid value type 'externref'
# Chrome 87 is the baseline for MV3 extension_pages, so the sender must stay
# loadable there. Keep the three pinned together: js-sys/web-sys 0.3.69 is the
# release that accompanied wasm-bindgen 0.2.92.
js-sys = "=0.3.69"
wasm-bindgen = { version = "=0.2.92", optional = true }
web-sys = { version = "=0.3.69", features = ["console"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "raptorq-core/serde", "qr-protocol/serde"]
# `wasm` implies `serde`: the wasm bindings (stats_json via serde_json::json!,
# and the serde-derived ObjectMeta) require it. Express the dependency here so a
# bare `--features wasm` build works, instead of failing on the compile_error!
# guard that used to sit next to the call site.
wasm = ["dep:wasm-bindgen", "serde"]
jni = []
# Plain C ABI export (`#[no_mangle] extern "C"`) for the Windows client's
# P/Invoke. An empty feature, like `jni`: it only switches the `cffi` module in,
# adds no new dependency, and relies on the already-declared `cdylib` crate-type
# to emit `transfer_engine.dll` on Windows targets.
cffi = []
