[package]
name = "qr-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QR frame format, chunking, compression and session logic for EasyTransfer."

[dependencies]
raptorq-core.workspace = true
crc32fast.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
# zstd is only available on native/android targets; on wasm32 the C library
# does not compile, so compression is performed on the JS side instead.
qrcode = { version = "0.14", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"

[features]
default = []
serde = ["dep:serde", "raptorq-core/serde"]
